--- a/HF/style-mobile.6e9cd.css
+++ b/HF/style-mobile.6e9cd.css
@@ -18,9 +18,9 @@ body, canvas, div {
 /* Remove spin of input type number */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
-    -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
 body {
@@ -83,24 +83,22 @@ p.footer {
 
 #splash {
   position: absolute;
-  top: 0%;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #171717 url(./splash.6496f.png) no-repeat center;
-  background-size: 100%;
+  background: #171717 url(./splash.85cfd.png) no-repeat center;
+  background-size: 45%;
 }
 
 .progress-bar {
-    background-color: #1a1a1a;
     position: absolute;
-    left: 25%;
+    left: 27.5%;
     top: 80%;
-    height: 15px;
-    padding: 5px;
-    width: 50%;
-    /*margin: 0 -175px;         */
-    border-radius: 5px;
+    height: 3px;
+    padding: 2px;
+    width: 45%;
+    border-radius: 7px;
     box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;           
 }
 
@@ -108,55 +106,10 @@ p.footer {
     display: block;
     height: 100%;
     border-radius: 3px;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
-    transition: width .4s ease-in-out; 
-    background-color: #34c2e3;    
+    transition: width .4s ease-in-out;
+    background-color: #3dc5de;
 }
 
-
-.div1{
-    width: 100%;
-    height:400px;
-    top: calc(50% - 220px);
-    left: -3%;
-    background: #ccc;
-    position: relative;
-    background: url(./cbin.0116c.png) no-repeat center;
-    background-size: 34%;
-}
-.div2{
-    width: 100%;
-    height: 400px;
-    background: #0099CC;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: url(./loading.ea4bd.png) no-repeat center;
-    background-size: 34%;
-}
-.mask{
-    width: 100%;
-    height: 0; /* 高度是变量 */
-    position: absolute;
-    left: 0;
-    top: 0; /* top是变量 */
-    overflow: hidden;
-    /*animation: animate 5s ease infinite;*/
-}
-.progress-text{
-   position: relative;
-   left: 25%;
-   top: calc(50% - 300px);
-   height: 45px;
-   padding: 5px;
-   width: 50%;   
-}
-
-.progress-text span{
-   font-size: 36px; 
-   font-family:fantasy;
-}
-    
 .stripes span {
     background-size: 30px 30px;
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
@@ -169,6 +122,3 @@ p.footer {
 @keyframes animate-stripes {
     0% {background-position: 0 0;} 100% {background-position: 60px 0;}
 }
-
-
-
